<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
    	android:title="@string/category_screen_title">
	    <!-- Color tuning -->
	    <com.cyanogenmod.P1Parts.ColorTuningPreference 
	        android:key="color_tuning"
	        android:title="@string/color_tuning_title_head"
	        android:summary="@string/color_tuning_summary_head" />
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_touchkey_title">
	    <!-- Touch key backlight timeout -->
	    <ListPreference 
	        android:key="backlight_timeout"
	        android:title="@string/backlight_timeout_title_head"
	        android:summary="@string/backlight_timeout_summary_head"
	        android:entries="@array/backlight_timeout_entries"
  			android:entryValues="@array/backlight_timeout_entries_values"
  			android:defaultValue="1600" />
	</PreferenceCategory>

	<PreferenceCategory
        android:title="@string/category_radio_title">
	    <!-- UMTS/HSDPA/HSUPA settings -->
	    <ListPreference
	        android:key="hspa"
	        android:title="@string/hspa_title_head"
	        android:summary="@string/hspa_summary_head"
	        android:entries="@array/hspa_entries"
            android:entryValues="@array/hspa_entries_values"
            android:defaultValue="23" />
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/category_tvout_title">
		<CheckBoxPreference
			android:key="tvout_enable"
			android:title="@string/tvout_enable_head"
			android:summaryOn="@string/tvout_enable_summary_on"
			android:summaryOff="@string/tvout_enable_summary_nocable"
			android:persistent="false"
			android:enabled="false" />
		<ListPreference
			android:key="tvout_system"
			android:title="@string/tvout_system_head"
			android:summary="@string/tvout_system_summary"
			android:entries="@array/tvout_system_entries"
			android:entryValues="@array/tvout_system_entries_values"
			android:defaultValue="2" />
	</PreferenceCategory>
</PreferenceScreen>
